[gd_scene load_steps=16 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Entities/Player/PlayerSprites/Idle0.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/PlayerSprites/Run0.png" type="Texture" id=3]
[ext_resource path="res://Entities/Player/PlayerSprites/Run1.png" type="Texture" id=4]
[ext_resource path="res://Entities/Player/PlayerSprites/Run2.png" type="Texture" id=5]
[ext_resource path="res://Entities/Player/PlayerSprites/Run3.png" type="Texture" id=6]
[ext_resource path="res://Entities/Player/PlayerSprites/Run4.png" type="Texture" id=7]
[ext_resource path="res://Entities/Player/PlayerSprites/Run7.png" type="Texture" id=8]
[ext_resource path="res://Entities/Player/PlayerSprites/Jump0.png" type="Texture" id=9]
[ext_resource path="res://Entities/Player/PlayerSprites/Jump1.png" type="Texture" id=10]
[ext_resource path="res://Entities/Player/PlayerSprites/Jump3.png" type="Texture" id=11]
[ext_resource path="res://Entities/Player/PlayerSprites/Jump4.png" type="Texture" id=12]
[ext_resource path="res://Entities/Player/health.gd" type="Script" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "Run",
"speed": 10.0
}, {
"frames": [ ExtResource( 2 ), null, ExtResource( 2 ), null, ExtResource( 2 ), null, ExtResource( 2 ) ],
"loop": true,
"name": "dead",
"speed": 3.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Jump",
"speed": 3.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 29.0

[node name="Player" type="KinematicBody2D"]
z_index = 1
collision_mask = 54
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 1 )
animation = "dead"
frame = 2

[node name="entityCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
editor_draw_screen = false
editor_draw_drag_margin = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 42, 0 )

[node name="ThrowingPos" type="Position2D" parent="."]
position = Vector2( 31.2455, -29.0372 )

[node name="Label" type="Label" parent="."]
margin_left = -65.3689
margin_top = -46.0
margin_right = 65.6311
margin_bottom = -32.0
align = 1
valign = 1

[node name="shootingDelay" type="Timer" parent="."]
wait_time = 0.7

[node name="health" type="Node" parent="."]
script = ExtResource( 13 )

[connection signal="timeout" from="shootingDelay" to="." method="_on_shootingDelay_timeout"]
